# claude-zchat-channel

./: .gitignore  README.md  agent_mcp.py  conversations.db-shm  conversations.db-wal  instructions.md  message.py  pyproject.toml  pytest.ini  routing.example.toml  routing_config.py  server.py  voice.env.example  voice.json.example
.artifacts/: registry.json
.artifacts/bootstrap/: bootstrap-report.md  manifest.json  test-baseline.json
.artifacts/code-diffs/: cs-diff-architecture-split.md  cs-diff-card-action.md  cs-diff-card-thread.md  cs-diff-commands.md  cs-diff-db-consolidation.md  cs-diff-feishu.md  cs-diff-gate-fix.md  cs-diff-irc-protocol.md  cs-diff-p2-commands.md  cs-diff-review-sla.md  cs-diff-routing.md  cs-diff-sla-timers.md
.artifacts/coverage/: coverage-matrix.md
.artifacts/e2e-reports/: cs-report-architecture-split.md  cs-report-card-action.md  cs-report-card-thread.md  cs-report-commands.md  cs-report-db-consolidation.md  cs-report-feishu.md  cs-report-gate-fix.md  cs-report-irc-protocol.md  cs-report-p2-commands.md  cs-report-review-sla.md  cs-report-routing.md  cs-report-sla-timers.md
.artifacts/eval-docs/: cs-eval-arch-review.md  cs-eval-architecture-refactor.md  cs-eval-architecture-split.md  cs-eval-card-action.md  cs-eval-card-thread.md  cs-eval-commands.md  cs-eval-db-consolidation.md  cs-eval-feishu.md  cs-eval-gate-fix.md  cs-eval-irc-protocol.md  cs-eval-p2-commands.md  cs-eval-prerelease-bugs.md  cs-eval-prerelease-infra.md  cs-eval-protocol-v2.md  cs-eval-review-sla.md  cs-eval-route-table.md  cs-eval-routing.md  cs-eval-sla-timers.md
.artifacts/test-plans/: cs-plan-architecture-refactor.md  cs-plan-architecture-split.md  cs-plan-card-action.md  cs-plan-card-thread.md  cs-plan-commands.md  cs-plan-db-consolidation.md  cs-plan-feishu.md  cs-plan-gate-fix.md  cs-plan-irc-protocol.md  cs-plan-p2-commands.md  cs-plan-review-sla.md  cs-plan-routing.md  cs-plan-sla-timers.md
.claude/: ralph-loop.local.md
.claude-plugin/: plugin.json
.feishu-bridge/: customer_chats.json
bridge_api/: __init__.py  ws_server.py
commands/: broadcast.md  dm.md  join.md  reply.md
engine/: __init__.py  command_handler.py  conversation_manager.py  db.py  event_bus.py  message_router.py  message_store.py  mode_manager.py  participant_registry.py  plugin_manager.py  squad_registry.py  timer_manager.py
feishu_bridge/: __init__.py  bridge.py  config.py  gate.py  group_manager.py  message_parsers.py  sender.py  test_client.py  visibility_router.py
feishu_bridge/tests/: test_card_action.py  test_gate.py  test_group_manager.py  test_parsers.py  test_sender.py  test_visibility.py  test_visibility_router.py
plugins/: README.md  __init__.py  manager.py  sla_app.py
protocol/: __init__.py  commands.py  event.py  gate.py
src/: instructions.md
src/channel_server/: __init__.py  __main__.py  irc_connection.py  plugin.py  plugin_loader.py  router.py  routing.py  routing_watcher.py  ws_server.py
src/feishu_bridge/: __main__.py  bridge.py  bridge_api_client.py  config.py  feishu_renderer.py  group_manager.py  outbound.py  routing_reader.py  sender.py  test_client.py  ws_client.py
src/plugins/: __init__.py
src/voice_bridge/: __init__.py  __main__.py  _doubao_proto.py  _volc_proto.py  bridge.py  config.py  cs_client.py  doubao_client.py  engines.py  session.py  tokens.py  ws_server.py
tests/: test_channel_server.py
tests/e2e/: conftest.py  test_bridge_lazy_create.py  test_bridge_registration.py  test_command_handlers.py  test_csat_flow.py  test_csat_lifecycle.py  test_customer_connect.py  test_db_lifecycle.py  test_gate_enforcement.py  test_help_request_lifecycle.py  test_message_protocol.py  test_mode_switching.py  test_p2_commands.py  test_plugin_pipeline.py  test_routing.py  test_server_startup.py  test_sla_alerts.py  test_sla_timers.py
tests/pre_release/: conftest.py  feishu-e2e-config.yaml  routing.toml  test_feishu_e2e.py
tests/unit/: conftest.py  test_activation_plugin.py  test_agent_mcp.py  test_agent_mcp_voice_link.py  test_architecture_split.py  test_audit_plugin.py  test_bridge_api.py  test_card_action.py  test_client_extended.py  test_command_handler.py  test_command_handlers.py  test_commands.py  (+55 more)
transport/: __init__.py  irc_transport.py
(+59 files in other folders)
