[project]
name = "zchat-channel-server"
version = "1.0.0.dev0"
description = "Claude Code Channel MCP server bridging IRC and Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "irc>=20.0",
    "zchat-protocol>=0.1.0",
    "websockets>=12.0",
    "lark-oapi>=1.4.0",
    "pyyaml>=6.0",
]
license = "MIT"
authors = [{ name = "ezagent42" }]

[project.urls]
Homepage = "https://github.com/ezagent42/claude-zchat-channel"
Repository = "https://github.com/ezagent42/claude-zchat-channel"

[tool.uv.sources]
zchat-protocol = { path = "../zchat-protocol", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["protocol", "engine", "transport", "bridge_api", "."]
only-include = [
    "server.py", "message.py", "instructions.md",
    "protocol/", "engine/", "transport/", "bridge_api/",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-order>=1.3.0",
    "pytest-timeout",
]

[project.scripts]
zchat-channel = "server:entry_point"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
]
