[project]
name = "zchat-channel-server"
version = "1.0.0.dev0"
description = "Claude Code Channel MCP server bridging IRC and Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "irc>=20.0",
    "zchat-protocol>=0.1.0",
    "websockets>=12.0",
    "lark-oapi>=1.4.0",
    "pyyaml>=6.0",
    "pyjwt>=2.8.0",
]
license = "MIT"
authors = [{ name = "ezagent42" }]

[project.urls]
Homepage = "https://github.com/ezagent42/claude-zchat-channel"
Repository = "https://github.com/ezagent42/claude-zchat-channel"

[tool.uv.sources]
zchat-protocol = { path = "../zchat-protocol", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/channel_server", "src/plugins", "src/feishu_bridge", "src/voice_bridge"]
# agent_mcp.py 在 src/ 下作为顶层模块（不是 package）；force-include 让 wheel
# 能装成 site-packages/agent_mcp.py。editable 装时通过 src/ 的 .pth 自动 link，
# 修改即生效，不再需要 reinstall。
only-include = ["src/agent_mcp.py"]
sources = ["src"]

# instructions.md / .claude-plugin / commands 仍在仓库根（runtime 文件，不是 Python）
[tool.hatch.build.targets.wheel.force-include]
"instructions.md" = "instructions.md"
".claude-plugin" = ".claude-plugin"
"commands" = "commands"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-order>=1.3.0",
    "pytest-timeout",
]

[project.scripts]
zchat-channel-server = "channel_server.__main__:main"
zchat-feishu-bridge = "feishu_bridge.__main__:main"
zchat-voice-bridge = "voice_bridge.__main__:main"
zchat-agent-mcp = "agent_mcp:entry_point"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
]
